[package]
name = "wasm-startup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
console = "0.15.7"
dialoguer = "0.11.0"
handlebars = "4.5.0"
indicatif = "0.17.7"
serde_json = "1.0.108"

[dev-dependencies]
predicates = "3.0.4"
