[package]
name = "wasm-startup"
version = "0.1.3"
edition = "2021"
authors = ["yexiyue"]
keywords = ["wasm", "rust", "startup"]
categories = ["wasm"]
repository = "https://github.com/yexiyue/wasm-startup"
readme = "README.md"
license = "MIT"
description = "A simple WASM startup project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
console = "0.15.7"
dialoguer = "0.11.0"
handlebars = "4.5.0"
indicatif = "0.17.7"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
predicates = "3.0.4"

[lib]
path = "./lib/lib.rs"
